# Searcher

./: .gitignore  CMakeLists.txt  Shape_Finder.cpp  Shape_Finder.h  Video_controller.cpp  Video_controller.h  main.cpp
test/: cross14.txt  cross_real14.txt  dot14.txt  dot_real14.txt  tiangle14.txt  tiangle_real14.txt
